crates/analyzer/tests/snapshots/errors__pow_with_wrong_capacity.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: incompatible `**` operand types
  ┌─ [snippet]:5:3
  │
5 │   base ** exp
  │   ^^^^    ^^^ this has type `u256`
  │   │        
  │   this has type `i128`
  │
  = The type of the right hand side cannot be larger than the left (`i128`)


